--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,11 @@
 @import "./fonts.css"; 
 
+/* Reset Style */
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body{
 	/*background-color: rgb(30,30,30);*/
 	background-color: white;
@@ -45,7 +51,7 @@ header{
 	width: 450px;
 	height: 50px; /* même hauteur que le logo */
 }
-#links a{
+#links span{
 	margin: auto 0;
 	font-family: "Montserrat", sans-serif;
 	font-size: 15px;
@@ -147,3 +153,137 @@ main::after{
 	font-family: "Montserrat", sans-serif;
 }
 
+
+
+/* Cards */
+.card{
+	/* reset default values */
+	border-radius: 18px;
+	background: transparent;
+	border: 0px;
+	position: relative;
+
+}
+
+.card-content{
+	position: absolute;
+	right: -20px;
+	border-radius: 18px;
+	background-color: white;
+	height: 225px;
+	position: relative;
+	box-shadow: 4px 4px 10px 0 rgba(0,0,0,.4);
+}
+
+.decoration{
+	width: 175px;
+	height: 175px;
+	background: linear-gradient(135deg, #4376A1, #23487B);
+	border-radius: 18px;
+	position: absolute;
+	transform: translateY(-50%);
+	top: 50%;
+	left: -40px;
+	box-shadow: 8px 8px 16px #2B4B6C;
+}
+
+.content{
+	position: absolute;
+	width: 100%;
+	padding-left: 175px;
+	transform: translateY(-50%);
+	top: 50%;
+	right: 15px;
+}
+
+.date{
+	font-size: 12px;
+	color: #383838FF;
+	font-weight: 500;
+}
+
+.title{
+	font-weight: bold;
+	font-family: "Montserrat", sans-serif;
+}
+
+.resume{
+	padding-top: 2px;
+	text-align: justify;
+    line-height: 1.25;
+    overflow: hidden;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    height: 38px;
+}
+
+.read-more{
+	background: linear-gradient(135deg, #4376A1, #23487B);
+	color: white;
+	border-radius: 20px;
+	font-weight: bold;
+	font-size: 11px;
+	text-transform: uppercase;
+	box-shadow: 3px 3px 10px #2B4B6C;
+}
+
+.read-more:hover{
+	color: white;
+	text-decoration: none;
+}
+
+
+
+
+
+
+/* Footer */
+#footer_color{
+	width: 93%;
+	height: 250px;
+	background: linear-gradient(135deg, #4376A1, #23487B);
+	margin: 0 auto;
+	border-radius: 20px;
+	box-shadow: 5px 5px 10px rgba(0,0,0,.4);
+	margin-top: 50px;
+	position: relative;
+}
+#text_footer{
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	width: 60%;
+	height: 60%;
+	text-align: center;
+}
+#text_footer h1{
+	color: white;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 700;
+}
+#footer{
+	width: 80%;
+	height: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0 auto;
+}
+#logo_footer{
+	width: 30px;
+	height: 30px;
+	overflow: hidden;
+}
+#logo_footer img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.footer_flex{
+	width: calc(100%/3);
+}
