--- a/src/css/main.css
+++ b/src/css/main.css
@@ -185,6 +185,14 @@ main::after{
 	top: 50%;
 	left: -40px;
 	box-shadow: 8px 8px 16px #2B4B6C;
+	overflow: hidden;
+}
+
+.decoration img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	filter:opacity(50%);
 }
 
 .content{
