--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,14 +32,14 @@ header{
 	justify-content: space-between;
 }
 #logo{
-	width: 50px;
+	width: 120px;
 	height: 50px;
-	overflow: hidden;
 }
 #logo img{
 	width: 100%;
 	height: 100%;
-	object-fit: cover;	
+	object-fit: contain;
+	filter: opacity(80%);
 }
 #links{
 	display: flex;
@@ -48,10 +48,10 @@ header{
 	align-items: start;
 	justify-content: space-between;
 	align-content: center;
-	width: 450px;
+	width: 300px;
 	height: 50px; /* même hauteur que le logo */
 }
-#links span{
+#links a{
 	margin: auto 0;
 	font-family: "Montserrat", sans-serif;
 	font-size: 15px;
@@ -72,6 +72,7 @@ header{
 }
 .link{
 	color: grey;
+	
 }
 .link:hover{
 	color: black;
