--- a/src/css/main.css
+++ b/src/css/main.css
@@ -162,6 +162,11 @@ main::after{
 	border-radius: 50px;
 	color: white;
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+	outline: none;
+}
+#button:active, #button:focus{
+	border: 0px solid transparent;
+	outline: none;
 }
 
 
@@ -242,7 +247,7 @@ main::after{
 
 .read-more{
 	background: linear-gradient(135deg, #4376A1, #23487B);
-	color: white;
+	color: white !important;
 	border-radius: 20px;
 	font-weight: bold;
 	font-size: 11px;
@@ -294,14 +299,13 @@ main::after{
 	margin: 0 auto;
 }
 #logo_footer{
-	width: 30px;
-	height: 30px;
-	overflow: hidden;
+	width: 50px;
+	height: 60px;
 }
 #logo_footer img{
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	object-fit: contain;
 }
 .footer_flex{
 	width: calc(100%/3);
